# bevy_sync

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: build.yml
assets/: cube.glb  morph.gltf
docs/: protocol.md
examples/: client.rs  host.rs
src/: binreflect.rs  bundle_fix.rs  client.rs  data.rs  lib.rs  lib_priv.rs  logging.rs  mesh_serde.rs  networking.rs  proto.rs  proto_serde.rs  receive.rs  receive_client.rs  receive_server.rs  send.rs  send_from_client.rs  send_from_server.rs  server.rs  tests.rs
src/client/: initial_sync.rs  mod.rs  receiver.rs  track.rs
src/full_sync/: mod.rs
src/networking/: assets.rs  mod.rs
src/networking/assets/: image_serde.rs  mesh_serde.rs  mod.rs
src/server/: initial_sync.rs  mod.rs  receiver.rs  track.rs
src/tests/: mod.rs  setup.rs  test_setup.rs
tests/: asset_sync.rs  component_sync.rs  entity_sync.rs  host_promotion.rs  initial_sync.rs  parent_sync.rs  steam_sockets.rs  tests.rs
tests/assert/: mod.rs
tests/setup/: mod.rs
