[package]
name = "bevy_sync"
version = "0.12.11"
edition = "2021"
authors = ["Raffaele Ragni <raffaele.ragni@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Plugin for synchronizing entities and components between server and its clients."
homepage = "https://github.com/raffaeleragni/bevy_sync"
repository = "https://github.com/raffaeleragni/bevy_sync"
documentation = "https://github.com/raffaeleragni/bevy_sync/blob/master/README.md"
readme = "README.md"
keywords = ["bevy", "netcode", "synchronization"]
categories = ["game-development", "network-programming"]
include = ["/src", "/LICENSE-MIT", "/LICENSE-APACHE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12" }
wgpu-types = { version = "0.17", features = ["serde", "replay", "trace"] }
bevy_renet = "0.0.10" 
bincode = "1.3.3"
serde = { version = "1.0.160", features = ["derive"] }

threadpool = "1.8.1"
tiny_http = { version = "0.11", default-features = false }
ureq = { version = "2.9.1", default-features = false }
portpicker = "0.1.1"
ascii = "1.1.0"
lz4-compress = "0.1.1"

[dev-dependencies]
serial_test = "2.0.0"
bevy_editor_pls = "0.6"
uuid = "1.5.0"
