[package]
name = "bevy_sync"
version = "0.13.0"
edition = "2021"
authors = ["Raffaele Ragni <raffaele.ragni@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Plugin for synchronizing entities and components between server and its clients."
homepage = "https://github.com/raffaeleragni/bevy_sync"
repository = "https://github.com/raffaeleragni/bevy_sync"
documentation = "https://github.com/raffaeleragni/bevy_sync/blob/master/README.md"
readme = "README.md"
keywords = ["bevy", "netcode", "synchronization"]
categories = ["game-development", "network-programming"]
include = ["/src", "/LICENSE-MIT", "/LICENSE-APACHE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13" }
wgpu-types = { version = "0.19", features = ["serde", "replay", "trace"] }
bevy_renet = "0.0.11" 
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

threadpool = "1.8"
tiny_http = { version = "0", default-features = false }
ureq = { version = "2.9", default-features = false }
portpicker = "0.1"
ascii = "1.1"
lz4-compress = "0.1"

[dev-dependencies]
serial_test = "3.0"
bevy_editor_pls = "0.8"
uuid = "1.8"
