[package]
name = "bevy_sync"
version = "0.14.0"
edition = "2021"
authors = ["Raffaele Ragni <raffaele.ragni@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Plugin for synchronizing entities and components between server and its clients."
homepage = "https://github.com/raffaeleragni/bevy_sync"
repository = "https://github.com/raffaeleragni/bevy_sync"
documentation = "https://github.com/raffaeleragni/bevy_sync/blob/master/README.md"
readme = "README.md"
keywords = ["bevy", "netcode", "synchronization"]
categories = ["game-development", "network-programming"]
include = ["/src", "/LICENSE-MIT", "/LICENSE-APACHE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14" }
wgpu-types = { version = "0.20.0", features = ["serde"] }
bevy_renet = "0.0.12"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
uuid = "1.10"

threadpool = "1.8"
tiny_http = { version = "0", default-features = false }
ureq = { version = "2.10", default-features = false }
portpicker = "0.1"
ascii = "1.1"
lz4-compression = "0.7"

[dev-dependencies]
serial_test = "3.1"
bevy_editor_pls = { git = "https://github.com/zhaop/bevy_editor_pls", branch = "bevy-0.14" }
#bevy_editor_pls = "0.8"
